# fovaros2024

./: Makefile  README.md  pyproject.toml
code/: clean.do  estimate.do  scrape_ep.py  scrape_mayor_data.py  scrape_party_list.py  timestamp.py
data/2024/: budapest_becsles.csv  budapest_party_list.csv  fopolgarmester.csv
